--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
       - key: JWT_EXPIRE
         value: 7d
       - key: CORS_ORIGIN
-        sync: false
+        value: "*"
       - key: MAX_FILE_SIZE
         value: 10485760
       - key: RATE_LIMIT_WINDOW_MS
